# tv_studio

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  flake.nix  shell.nix  vcpkg.json
.agents/: AGENTS.md
.github/workflows/: ci.yml
build_mac/: Makefile
src/: camera.h  character.h  main.cpp  move.h  plane.h  scene.h  sdladapters.h  sprite.h  units.h
src/scenes/: forest.h  ice.h
src/will/: jump.h  prosecution.h
