cmake_minimum_required(VERSION 3.5)
project(tv_studio VERSION 0.1.0)

include(CTest)
enable_testing()

find_package(SDL2 CONFIG REQUIRED)
find_package(SDL2_image CONFIG REQUIRED)
find_package(SDL2_ttf CONFIG REQUIRED)

if(MSVC)
    add_compile_options("/std:c++latest")
endif()
# Dynamic lookup of SDL2 target include directories to configure extra include paths for clang-tidy.
set(CLANG_TIDY_EXTRA_ARGS "")
foreach(tgt SDL2::SDL2 SDL2_image::SDL2_image SDL2_ttf::SDL2_ttf)
    if(TARGET ${tgt})
        get_target_property(includes ${tgt} INTERFACE_INCLUDE_DIRECTORIES)
        if(includes)
            foreach(dir IN LISTS includes)
                if(dir MATCHES "SDL2$")
                    string(REGEX REPLACE "/SDL2$" "" parent_dir "${dir}")
                    list(APPEND CLANG_TIDY_EXTRA_ARGS "--extra-arg=-isystem${parent_dir}")
                endif()
            endforeach()
        endif()
    endif()
endforeach()

# If running under Nix, parse NIX_CFLAGS_COMPILE to inject system library search paths into clang-tidy.
if(DEFINED ENV{NIX_CFLAGS_COMPILE})
    string(REPLACE " " ";" NIX_FLAGS "$ENV{NIX_CFLAGS_COMPILE}")
    set(next_is_path FALSE)
    set(pending_flag "")
    foreach(flag IN LISTS NIX_FLAGS)
        if(next_is_path)
            list(APPEND CLANG_TIDY_EXTRA_ARGS "--extra-arg=${pending_flag}${flag}")
            if(EXISTS "${flag}/c++/v1")
                list(APPEND CLANG_TIDY_EXTRA_ARGS "--extra-arg=${pending_flag}${flag}/c++/v1")
            endif()
            set(next_is_path FALSE)
        elseif(flag MATCHES "^-isystem$" OR flag MATCHES "^-I$")
            set(pending_flag "${flag}")
            set(next_is_path TRUE)
        elseif(flag MATCHES "^-isystem" OR flag MATCHES "^-I")
            list(APPEND CLANG_TIDY_EXTRA_ARGS "--extra-arg=${flag}")
            if(flag MATCHES "^-isystem(.+)$")
                set(path_part "${CMAKE_MATCH_1}")
                if(EXISTS "${path_part}/c++/v1")
                    list(APPEND CLANG_TIDY_EXTRA_ARGS "--extra-arg=-isystem${path_part}/c++/v1")
                endif()
            elseif(flag MATCHES "^-I(.+)$")
                set(path_part "${CMAKE_MATCH_1}")
                if(EXISTS "${path_part}/c++/v1")
                    list(APPEND CLANG_TIDY_EXTRA_ARGS "--extra-arg=-I${path_part}/c++/v1")
                endif()
            endif()
        endif()
    endforeach()
endif()

find_program(CLANG_TIDY_EXE NAMES clang-tidy)
if(CLANG_TIDY_EXE)
    set(CMAKE_CXX_CLANG_TIDY ${CLANG_TIDY_EXE};${CLANG_TIDY_EXTRA_ARGS})
    message(STATUS "CMAKE_CXX_CLANG_TIDY: ${CMAKE_CXX_CLANG_TIDY}")
endif()

add_executable(tv_studio src/main.cpp)

if(NOT MSVC)
    target_compile_features(tv_studio PRIVATE cxx_std_17)
endif()

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

if(MSVC)
    target_link_libraries(tv_studio PRIVATE SDL2::SDL2main SDL2::SDL2-static)
else()
    target_link_libraries(tv_studio PRIVATE SDL2::SDL2)
endif()
target_link_libraries(tv_studio PRIVATE SDL2_image::SDL2_image)
target_link_libraries(tv_studio PRIVATE SDL2_ttf::SDL2_ttf)

# Add parent directories to target includes as well for other compiler/IDE tooling
foreach(tgt SDL2::SDL2 SDL2_image::SDL2_image SDL2_ttf::SDL2_ttf)
    if(TARGET ${tgt})
        get_target_property(includes ${tgt} INTERFACE_INCLUDE_DIRECTORIES)
        if(includes)
            foreach(dir IN LISTS includes)
                if(dir MATCHES "SDL2$")
                    string(REGEX REPLACE "/SDL2$" "" parent_dir "${dir}")
                    target_include_directories(tv_studio PRIVATE "${parent_dir}")
                endif()
            endforeach()
        endif()
    endif()
endforeach()
